added modelfit branch; updated Makefile

--- a/Makefile.in
+++ b/Makefile.in
@@ -7,7 +7,7 @@ SUBDIR = ???SUBDIR???
 DOCPATH = $(INSTALLPATH)/docs
 LIBPATH = $(INSTALLPATH)/lib/$(SUBDIR)
 PROGSRCPATH = $(INSTALLPATH)/progs
-PROGPATH = $(PROGSRCPATH)/$(SUBDIR)
+PROGPATH = $(INSTALLPATH)/bin/$(SUBDIR)
 
 LIBNAME = shapelens
 
@@ -26,13 +26,18 @@ FRAMEINCLPATH = $(INCLPATH)/frame
 FRAMESRC = $(wildcard $(FRAMESRCPATH)/*.cc)
 FRAMEOBJECTS = $(FRAMESRC:$(FRAMESRCPATH)/%.cc=$(LIBPATH)/%.o)
 
+MODELFITSRCPATH = $(SRCPATH)/modelfit
+MODELFITINCLPATH = $(INCLPATH)/modelfit
+MODELFITSRC = $(wildcard $(MODELFITSRCPATH)/*.cc)
+MODELFITOBJECTS = $(MODELFITSRC:$(MODELFITSRCPATH)/%.cc=$(LIBPATH)/%.o)
+
 COMMONSRC = $(wildcard $(SRCPATH)/*.cc)
 COMMONOBJECTS = $(COMMONSRC:$(SRCPATH)/%.cc=$(LIBPATH)/%.o)
 
 PROGS = $(wildcard $(PROGSRCPATH)/*.cc)
 PROGSOBJECTS = $(PROGS:$(PROGSRCPATH)/%.cc=$(PROGPATH)/%)
 
-HEADERS = $(wildcard $(INCLPATH)/*.h) $(wildcard $(SHAPELETSINCLPATH)/*.h) $(wildcard $(FRAMEINCLPATH)/*.h) $(wildcard $(NUMLAPATH)/*.h)
+HEADERS = $(wildcard $(INCLPATH)/*.h) $(wildcard $(SHAPELETSINCLPATH)/*.h) $(wildcard $(FRAMEINCLPATH)/*.h) $(wildcard $(MODELFITINCLPATH)/*.h) $(wildcard $(NUMLAPATH)/*.h)
 
 CC = ???COMPILER???
 CFLAGS = ???CFLAGS??? -I$(NUMLAPATH) -I$(INCLPATH) ???OTHERINCL???
@@ -74,6 +79,11 @@ cleanframe:
 	rm -f $(LIBPATH)/lib$(LIBNAME).a
 	rm -f $(LIBPATH)/lib$(LIBNAME).so
 
+cleanmodelfit:
+	rm -f $(MODELFITOBJECTS)
+	rm -f $(LIBPATH)/lib$(LIBNAME).a
+	rm -f $(LIBPATH)/lib$(LIBNAME).so
+
 cleancommon:
 	rm -f $(COMMONOBJECTS)
 	rm -f $(LIBPATH)/lib$(LIBNAME).a
@@ -90,16 +100,19 @@ progs: $(PROGSOBJECTS)
 
 ???DOCTARGET???
 
-$(LIBPATH)/lib$(LIBNAME).a: $(SHAPELETSOBJECTS) $(FRAMEOBJECTS) $(LENSINGOBJECTS) $(COMMONOBJECTS)
+$(LIBPATH)/lib$(LIBNAME).a: $(SHAPELETSOBJECTS) $(FRAMEOBJECTS) $(LENSINGOBJECTS) $(MODELFITOBJECTS) $(COMMONOBJECTS)
 	$(AR) $(ARFLAGS) $@ $?
 
-$(LIBPATH)/lib$(LIBNAME).so: $(SHAPELETSOBJECTS) $(FRAMEOBJECTS) $(LENSINGOBJECTS) $(COMMONOBJECTS)
+$(LIBPATH)/lib$(LIBNAME).so: $(SHAPELETSOBJECTS) $(FRAMEOBJECTS) $(LENSINGOBJECTS) $(MODELFITOBJECTS) $(COMMONOBJECTS)
 	$(CC) $(SHAREDFLAGS) -o $@ $?
 
 $(LIBPATH)/%.o: $(SHAPELETSSRCPATH)/%.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(LIBPATH)/%.o: $(FRAMESRCPATH)/%.cc
+	$(CC) $(CFLAGS) -c $< -o $@
+
+$(LIBPATH)/%.o: $(MODELFITSRCPATH)/%.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(LIBPATH)/%.o: $(LENSINGSRCPATH)/%.cc
