finally added Moments; introduced utils branch; cleaned header dependencies

--- a/Makefile.in
+++ b/Makefile.in
@@ -34,10 +34,15 @@ MODELFITOBJECTS = $(MODELFITSRC:$(MODELFITSRCPATH)/%.cc=$(LIBPATH)/%.o)
 COMMONSRC = $(wildcard $(SRCPATH)/*.cc)
 COMMONOBJECTS = $(COMMONSRC:$(SRCPATH)/%.cc=$(LIBPATH)/%.o)
 
+UTILSSRCPATH = $(SRCPATH)/utils
+UTILSINCLPATH = $(INCLPATH)/utils
+UTILSSRC = $(wildcard $(SRCPATH)/utils/*.cc)
+UTILSOBJECTS = $(UTILSSRC:$(SRCPATH)/utils/%.cc=$(LIBPATH)/%.o)
+
 PROGS = $(wildcard $(PROGSRCPATH)/*.cc)
 PROGSOBJECTS = $(PROGS:$(PROGSRCPATH)/%.cc=$(PROGPATH)/%)
 
-HEADERS = $(wildcard $(INCLPATH)/*.h) $(wildcard $(SHAPELETSINCLPATH)/*.h) $(wildcard $(FRAMEINCLPATH)/*.h) $(wildcard $(MODELFITINCLPATH)/*.h) $(wildcard $(NUMLAPATH)/*.h)
+HEADERS = $(wildcard $(INCLPATH)/*.h) $(wildcard $(SHAPELETSINCLPATH)/*.h) $(wildcard $(FRAMEINCLPATH)/*.h) $(wildcard $(MODELFITINCLPATH)/*.h) $(wildcard $(NUMLAPATH)/*.h) $(wildcard $(UTILSINCLPATH)/*.h)
 
 CC = ???COMPILER???
 CFLAGS = ???CFLAGS??? -I$(NUMLAPATH) -I$(INCLPATH) ???OTHERINCL???
@@ -100,10 +105,10 @@ progs: $(PROGSOBJECTS)
 
 ???DOCTARGET???
 
-$(LIBPATH)/lib$(LIBNAME).a: $(SHAPELETSOBJECTS) $(FRAMEOBJECTS) $(LENSINGOBJECTS) $(MODELFITOBJECTS) $(COMMONOBJECTS)
+$(LIBPATH)/lib$(LIBNAME).a: $(SHAPELETSOBJECTS) $(FRAMEOBJECTS) $(LENSINGOBJECTS) $(MODELFITOBJECTS) $(COMMONOBJECTS) $(UTILSOBJECTS)
 	$(AR) $(ARFLAGS) $@ $?
 
-$(LIBPATH)/lib$(LIBNAME).so: $(SHAPELETSOBJECTS) $(FRAMEOBJECTS) $(LENSINGOBJECTS) $(MODELFITOBJECTS) $(COMMONOBJECTS)
+$(LIBPATH)/lib$(LIBNAME).so: $(SHAPELETSOBJECTS) $(FRAMEOBJECTS) $(LENSINGOBJECTS) $(MODELFITOBJECTS) $(COMMONOBJECTS) $(UTILSOBJECTS)
 	$(CC) $(SHAREDFLAGS) -o $@ $?
 
 $(LIBPATH)/%.o: $(SHAPELETSSRCPATH)/%.cc
@@ -116,6 +121,9 @@ $(LIBPATH)/%.o: $(MODELFITSRCPATH)/%.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(LIBPATH)/%.o: $(LENSINGSRCPATH)/%.cc
+	$(CC) $(CFLAGS) -c $< -o $@
+
+$(LIBPATH)/%.o: $(UTILSSRCPATH)/%.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(LIBPATH)/%.o: $(SRCPATH)/%.cc
