--- a/Makefile.in
+++ b/Makefile.in
@@ -1,10 +1,10 @@
-# input Makefile to by used for configure.py
+# input Makefile to be used for configure.py
 ???GENERAL???
 SRCPATH = ./src
 INCLPATH = ./include
+PROGSRCPATH = ./progs
 
 LIBPATH = ./lib/$(SUBDIR)
-
 LIBNAME = shapelens
 
 SHAPELETSSRCPATH = $(SRCPATH)/shapelets
@@ -35,10 +35,16 @@ UTILSINCLPATH = $(INCLPATH)/utils
 UTILSSRC = $(wildcard $(SRCPATH)/utils/*.cc)
 UTILSOBJECTS = $(UTILSSRC:$(SRCPATH)/utils/%.cc=$(LIBPATH)/%.o)
 
+PROGPATH = $(PREFIX)/bin/$(SUBDIR)
+PROGS = $(wildcard $(PROGSRCPATH)/*.cc)
+PROGSOBJECTS = $(PROGS:$(PROGSRCPATH)/%.cc=$(PROGPATH)/%)
+
 HEADERS = $(wildcard $(INCLPATH)/*.h) $(wildcard $(SHAPELETSINCLPATH)/*.h) $(wildcard $(FRAMEINCLPATH)/*.h) $(wildcard $(MODELFITINCLPATH)/*.h) $(wildcard $(UTILSINCLPATH)/*.h)
 
 CC = ???COMPILER???
 CFLAGS = ???CFLAGS??? -I$(INCLPATH) ???OTHERINCL???
+CFLAG_LIBS = -L$(PREFIX)/lib/$(SUBDIR) ???OTHERLIBS???
+LIBS = -lshapelens -lgsl -lcblas -llapack_atlas -latlas -llapack -lg2c -lcfitsio ???SPECIALLIBS???
 
 AR = ar
 ARFLAGS = -sr
@@ -51,10 +57,6 @@ SHAREDFLAGS = -shared -fPIC
 ???TARGETS???
 
 clean:
-	rm -f $(LIBPATH)/*
-	rm -f $(PROGPATH)/*
-
-cleanlib:
 	rm -f $(LIBPATH)/*
 
 cleanshared:
@@ -92,11 +94,14 @@ lib: $(LIBPATH)/lib$(LIBNAME).a
 
 shared: $(LIBPATH)/lib$(LIBNAME).so
 
-install: lib shared progs
+install: lib shared
 	mkdir -p $(PREFIX)/lib/$(SUBDIR)
 	cp $(LIBPATH)/lib$(LIBNAME).a $(PREFIX)/lib/$(SUBDIR)
 	cp $(LIBPATH)/lib$(LIBNAME).so $(PREFIX)/lib/$(SUBDIR)
-	cp -r $(INCLPATH) $(PREFIX)/include/$(LIBNAME)
+	mkdir  -p $(PREFIX)/include/$(LIBNAME)
+	cd $(INCLPATH) && find . -type f -name '*.h' -exec  cp --parents {} $(PREFIX)/include/$(LIBNAME)/ \; && cd ../
+
+progs: $(PROGSOBJECTS)
 
 ???DOCTARGET???
 
@@ -123,3 +128,7 @@ $(LIBPATH)/%.o: $(UTILSSRCPATH)/%.cc
 
 $(LIBPATH)/%.o: $(SRCPATH)/%.cc
 	$(CC) $(CFLAGS) -c $< -o $@
+
+$(PROGPATH)/%: $(PROGSRCPATH)/%.cc
+	mkdir -p $(PROGPATH)
+	$(CC) $(CFLAGS) $(CFLAG_LIBS) $< -o $@ $(LIBS)
