--- a/Makefile.in
+++ b/Makefile.in
@@ -88,7 +88,7 @@ cleancommon:
 	rm -f $(LIBPATH)/lib$(LIBNAME).so
 
 cleanprogs:
-	rm -f $(PROGPATH)/*
+	rm -f $(PROGSOBJECTS)
 
 lib: $(LIBPATH)/lib$(LIBNAME).a
 
@@ -100,6 +100,7 @@ install: lib shared
 	cp $(LIBPATH)/lib$(LIBNAME).so $(PREFIX)/lib/$(SUBDIR)
 	mkdir  -p $(PREFIX)/include/$(LIBNAME)
 	cd $(INCLPATH) && find . -type f -name '*.h' -exec  cp --parents {} $(PREFIX)/include/$(LIBNAME)/ \; && cd ../
+	mkdir -p $(PROGPATH)
 
 progs: $(PROGSOBJECTS)
 
@@ -130,5 +131,4 @@ $(LIBPATH)/%.o: $(SRCPATH)/%.cc
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(PROGPATH)/%: $(PROGSRCPATH)/%.cc
-	mkdir -p $(PROGPATH)
 	$(CC) $(CFLAGS) $(CFLAG_LIBS) $< -o $@ $(LIBS)
